# retas-studio

./: .gitignore  .ralph-state.md  Cargo.toml  PROJECT_COMPLETION_REPORT.md  README.md  ROADMAP.md  ralgh.md  setup-rust.sh
.playwright-mcp/: page-2026-04-21T15-27-33-212Z.yml  page-2026-04-21T15-31-32-498Z.yml  page-2026-04-21T15-49-20-090Z.yml  page-2026-04-21T15-53-44-022Z.yml  page-2026-04-21T15-56-28-567Z.yml  page-2026-04-21T15-56-45-871Z.yml  page-2026-04-21T15-56-52-432Z.yml  page-2026-04-21T16-02-22-661Z.yml  page-2026-04-21T16-06-00-692Z.yml  page-2026-04-23T17-17-11-004Z.yml  page-2026-04-23T17-17-28-055Z.yml
Reference/csp-guide/: README.md
Reference/csp-guide/data/: detailed-content.json
Reference/csp-guide/modules/01-update-history/: README.md
Reference/csp-guide/modules/02-windows-macos-basics/: README.md
Reference/csp-guide/modules/03-tablet-basics/: README.md
Reference/csp-guide/modules/04-tools-settings/: README.md
Reference/csp-guide/modules/05-layers/: README.md
Reference/csp-guide/modules/06-file-operations/: README.md
Reference/csp-guide/modules/07-brush-drawing/: README.md
Reference/csp-guide/modules/08-canvas-operations/: README.md
Reference/csp-guide/modules/09-color-selection/: README.md
Reference/csp-guide/modules/10-selection/: README.md
Reference/csp-guide/modules/11-transform-align/: README.md
Reference/csp-guide/modules/12-filters/: README.md
Reference/csp-guide/modules/13-fill-gradient/: README.md
Reference/csp-guide/modules/14-figure-drawing/: README.md
Reference/csp-guide/modules/15-text/: README.md
Reference/csp-guide/modules/16-ruler/: README.md
Reference/csp-guide/modules/17-comic-webtoon/: README.md
Reference/csp-guide/modules/18-page-management/: README.md
Reference/csp-guide/modules/19-animation/: README.md
Reference/csp-guide/modules/20-materials/: README.md
Reference/csp-guide/modules/21-3d-features/: README.md
Reference/csp-guide/modules/22-interface-customization/: README.md
Reference/教程/: RETAS-序列号.txt
Reference/补丁/: stylos-二值窗口补丁.7z
crates/retas-core/: Cargo.toml
crates/retas-core/src/: audio.rs  camera.rs  color.rs  composite.rs  document.rs  geometry.rs  history.rs  layer.rs  lib.rs  matrix.rs  shortcut.rs  text.rs  tool.rs
crates/retas-core/src/advanced/: animation.rs  batch.rs  brush.rs  clipboard.rs  coloring.rs  cut_system.rs  effect_processor.rs  effects.rs  guides.rs  keyframe.rs  light_table.rs  mod.rs  motion_check.rs  print.rs  render_queue.rs  selection.rs  undo.rs  vectorize.rs
crates/retas-core/tests/: brush_test.rs  color_test.rs  composite_test.rs  coordinate_test.rs  geometry_test.rs  integration_test.rs  layer_crud_test.rs  matrix_test.rs  undo_test.rs
crates/retas-core/tests/common/: fixtures.rs
crates/retas-io/: Cargo.toml
crates/retas-io/src/: cel.rs  dga.rs  error.rs  export.rs  lib.rs  reader.rs  scs.rs  writer.rs
crates/retas-io/src/export/: image_exporter.rs  mod.rs  svg.rs  swf.rs  video.rs
crates/retas-io/tests/: export_test.rs  file_io_test.rs
crates/retas-render/: Cargo.toml
crates/retas-render/src/: device.rs  lib.rs  pipeline.rs  rasterizer.rs  renderer.rs  shader.rs  surface.rs  texture.rs
crates/retas-render/src/renderer/: blend.rs  layer_render.rs  mod.rs
crates/retas-render/src/shaders/: color_burn.wgsl  color_dodge.wgsl  difference.wgsl  exclusion.wgsl  hard_light.wgsl  overlay.wgsl  soft_light.wgsl  stroke.wgsl  texture.wgsl
crates/retas-render/tests/: rasterizer_test.rs
crates/retas-ui/: Cargo.toml
crates/retas-ui/src/: app.rs  brush_panel.rs  canvas.rs  color_picker.rs  effects_panel.rs  export_panel.rs  fill_tool.rs  frame.rs  layer.rs  layer_panel.rs  lib.rs  messages.rs  style.rs  stylus.rs  timeline.rs  toolbar.rs  vector_layer.rs  vector_layer_panel.rs  vector_render.rs
crates/retas-vector/: Cargo.toml
crates/retas-vector/src/: bezier.rs  lib.rs  path.rs  stroke.rs  stroke_render.rs  tessellation.rs
crates/retas-vector/tests/: bezier_test.rs  path_test.rs  tessellation_test.rs
docs/: ANALYSIS.md  ARCHITECTURE.md  CLASS_REFERENCE.md  CROSS_PLATFORM_ARCHITECTURE.md  CSP_FEATURE_GAP_ANALYSIS.md  DEVELOPMENT.md  FEATURE_CHECKLIST.md  FEATURE_COMPARISON.md  FILE_FORMATS.md  HASP_SOLUTIONS.md  IMPLEMENTATION_ROADMAP.md  MIGRATION_PLAN.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_PLAN.md  PHASE2_VERIFICATION_REPORT.md  ROADMAP.md  TODO.md  UTM_GUIDE.md
retas-tauri/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
retas-tauri/e2e/: cross-mouse.spec.ts  retas.spec.ts
retas-tauri/src/: App.tsx  api.mock.test.ts  api.mock.ts  api.ts  main.tsx  styles.css  vite-env.d.ts
retas-tauri/src-tauri/: Cargo.toml  lib.rs  tauri.conf.json
retas-tauri/src-tauri/src/: lib.rs  main.rs  state.rs
retas-tauri/src-tauri/src/ai/: api_client.rs  engine.rs  mod.rs  pipeline.rs  queue.rs
retas-tauri/src/components/: AiPanel.tsx  Canvas.tsx  ColorPanel.test.tsx  ColorPanel.tsx  CutSystemPanel.tsx  EffectsPanel.tsx  ExportDialog.tsx  LayerPanel.tsx  LayerPanelEnhanced.tsx  LightTablePanel.tsx  MemoryMonitor.tsx  MotionCheckPanel.tsx  NewDocumentDialog.tsx  OnionSkinPanel.tsx  PenTool.tsx  PerspectiveGuidePanel.tsx  PlaybackController.tsx  RenderQueuePanel.tsx  SelectionTool.tsx  SelectionToolPanel.tsx  ShortcutHelp.tsx  SkiaCanvas.tsx  Timeline.tsx  ToolBox.tsx  UnifiedCanvas.tsx  WorkspaceSwitcher.tsx  XSheetPanel.tsx
retas-tauri/src/hooks/: useCanvasKit.ts  useKeyboardShortcuts.ts  useWorkspace.tsx
retas-tauri/src/utils/: CanvasMonitor.ts  fileDialog.ts
src/: cli.rs  editor.rs  main.rs
tools/: check-environment.sh  install.sh
wine-config/: CONFIGURATION.md  retas_registry.reg
(+7 files in other folders)
