[workspace]
members = [
    "crates/retas-core",
    "crates/retas-render",
    "crates/retas-vector",
    "crates/retas-io",
    "retas-tauri/src-tauri",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["RETAS Studio Contributors"]
repository = "https://github.com/ageless-h/retas-studio"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
image = { version = "0.25", default-features = false }
wgpu = "23"
futures = "0.3"
zip = "2"
gif = "0.13"
flate2 = "1"
lyon = "1"
nalgebra = "0.32"
uuid = { version = "1", features = ["v4", "serde"] }
raw-window-handle = "0.6"
bytemuck = { version = "1.16", features = ["derive"] }
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-build = { version = "2", features = [] }

retas-core = { path = "crates/retas-core" }
retas-render = { path = "crates/retas-render" }
retas-vector = { path = "crates/retas-vector" }
retas-io = { path = "crates/retas-io" }
