[package]
name = "retas-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core data structures and types for RETAS Studio"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
nalgebra = { workspace = true }
uuid = { workspace = true }
