[package]
name = "retas-vector"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vector graphics and bezier curve rendering for RETAS Studio"

[dependencies]
retas-core = { path = "../retas-core" }
lyon = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
