[package]
name = "retas-tauri"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

retas-core = { path = "../../crates/retas-core" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
