[package]
name = "retas-tauri"
version.workspace = true
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

retas-core = { path = "../../crates/retas-core" }
retas-io = { path = "../../crates/retas-io" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
